# pyEOCFI

./: .gitignore  LICENSE  Makefile  README.md  environment.yml  setup.cfg
pyeocfi/lib/cinlude/: eocfi_lib.h
pyeocfi/lib/csrc/: eocfi_lib.c
