[metadata]
name = pyEOCFI
description = python wrapper for EOCFI software
long_description = file: README.rst
author = Thomas Armstrong
author_email = tarmstrong@groupcls.com
license = MIT
url = https://github.com/thomasarmstrong/pyEOCFI
classifiers =
    Intended Audience :: Science/Research
    License :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: Implementation :: CPython
    Topic :: Scientific/Engineering :: Astronomy
    Development Status :: 3 - Alpha

